python-inheritance/tests/1-my_list.txt
>>> MyList = __import__('1-my_list').MyList


>>> my_list = MyList()
>>> my_list.append(1)
>>> my_list.append(4)
>>> my_list.append(2)
>>> my_list.append(3)
>>> my_list.append(5)
>>> my_list.print_sorted()
[1, 2, 3, 4, 5]

>>> my_list = MyList(6)
Traceback (most recent call last):
...
TypeError: 'int' object is not iterable


>>> my_list = MyList(-6)
Traceback (most recent call last):
...
TypeError: 'int' object is not iterable


>>> my_list = MyList(6, 2)
Traceback (most recent call last):
...
TypeError: list expected at most 1 argument, got 2


>>> my_list.print_sorted(5)
Traceback (most recent call last):
...
TypeError: print_sorted() takes 1 positional argument but 2 were given


>>> my_list.print_sorted(5, 2)
Traceback (most recent call last):
...
TypeError: print_sorted() takes 1 positional argument but 3 were given

>>> my_list.clear()

>>> my_list.append(2)
>>> my_list += [4]
>>> my_list.append(1)
>>> my_list.append(5)
>>> my_list.print_sorted()
[1, 2, 4, 5]


>>> my_list
[2, 4, 1, 5]


>>> print(my_list)
[2, 4, 1, 5]

>>> my_list.clear()


>>> my_list.append(-1)
>>> my_list.append(-4)
>>> my_list += [-8]
>>> my_list.append(-5)
>>> my_list.print_sorted()
[-8, -5, -4, -1]

>>> my_list.clear()


>>> my_list.append(-1)
>>> my_list.append(4)
>>> my_list.append(-8)
>>> my_list += [5]
>>> my_list.print_sorted()
[-8, -1, 4, 5]


>>> my_list.clear()


>>> my_list.append(2)
>>> my_list.append(2)
>>> my_list.append(5)
>>> my_list.append(1)
>>> my_list.print_sorted()
[1, 2, 2, 5]

>>> my_list.clear()


>>> my_list.append(-2)
>>> my_list.append(-2)
>>> my_list.append(5)
>>> my_list.append(1)
>>> my_list.print_sorted()
[-2, -2, 1, 5]


>>> my_list.clear()


>>> my_list.append(2)
>>> my_list.print_sorted()
[2]


>>> my_list.clear()


>>> my_list.append(-2)
>>> my_list.print_sorted()
[-2]


>>> my_list.clear()


>>> my_list.append(4)


>>> my_list.append(-4)


>>> my_list.append(4, 1)
Traceback (most recent call last):
...
TypeError: append() takes exactly one argument (2 given)


>>> my_list.clear()


>>> my_list.clear(4)
Traceback (most recent call last):
...
TypeError: clear() takes no arguments (1 given)


>>> my_list.copy()
[]


>>> my_list.append(4)
>>> my_list.append(-4)
>>> my_list.copy()
[4, -4]



